# DataCache

./: .gitignore  CMakeLists.txt  LICENSE.md  License.md  README.md  TODO  build.sh
DataCache/: CMakeLists.txt  DataBlock.hpp  DataCache.hpp  DataCacheOid.hpp  ObjectCounter.hpp  StringStreamer.hpp  UsingDataCacheIn.hpp
DataCache/Details/: DataBlockCollection.hpp  DataBlockCollectionInterface.hpp  DataCache.hpp  DataCacheSetter.hpp  DebugHelpers.hpp  DefaultDataCache.hpp  FieldRegistrationLatch.hpp  ObjectCounterTagTypes.hpp  TagTypes.hpp
DataCache/Exception/: Exceptions.hpp
DataCache/Source/: DataCache.cpp  DataCacheOid.cpp  DataCacheSetter.cpp  DebugHelpers.cpp  DefaultDataCache.cpp  Exceptions.cpp  RegisteredFieldId.hpp
DataCache/Testing/: CMakeLists.txt  DataCacheAccessor.cpp  DataCacheAccessor.hpp  DataCacheOidResetter.hpp  Dummy.cpp  OidGeneratorResetter.hpp
DataCache/UnitTest/: CMakeLists.txt  DataBlockCollection-UnitTest.cpp  DataCache-UnitTest.cpp  DataCacheOid-UnitTest.cpp  ObjectCounter-UnitTest.cpp  ReadmeCode-Example.cpp  StringStreamer-UnitTest.cpp  UsingDataCacheIn-UnitTest.cpp
DataCache/src/: DataBlockCollectionInterface.cpp  DataCache.cpp  DataCacheOid.cpp  DataCacheOid.hpp  DataCacheSetter.cpp  DebugHelpers.cpp  DefaultDataCache.cpp  Exceptions.cpp  OidGenerator.cpp  OidGenerator.hpp  RegisteredFieldId.cpp
DataCache/testing/: DataCacheAccessor.hpp  DataCacheOidResetter.hpp  ObjectCounterResetter.hpp  UsingDataCacheInAccessor.hpp
DataCache/tests/unit_test/: DataBlockCollection-UnitTest.cpp  DataCache-UnitTest.cpp  DataCacheOid-UnitTest.cpp  ObjectCounter-UnitTest.cpp  ReadmeCode-Example.cpp  StringStreamer-UnitTest.cpp  UsingDataCacheIn-UnitTest.cpp  main.cpp
DataCache/tests/unit_test/platform/: UnitTestSupport.hpp
_cmake/: dependencies.cmake
